--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 500000
+lib_deps = adafruit/Adafruit MPU6050 @ ^2.0.3
+           adafruit/Adafruit Unified Sensor @ ^1.1.4
