--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 monitor_speed = 1000000
 lib_deps = adafruit/Adafruit MPU6050 @ ^2.0.3
            adafruit/Adafruit Unified Sensor @ ^1.1.4
+           bogde/HX711@^0.7.5
